...
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|enterAlways"
            app:subtitleTextColor="@android:color/white"
            app:titleTextColor="@android:color/white">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/white"
                android:clickable="true"
...

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
...
