...
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:fadingEdge="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:padding="8dp"
                android:id="@+id/rv_league"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

...
                    android:layout_marginBottom="8dp"
                    android:text="@string/youtube"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_youtube"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:autoLink="all"
                    android:linksClickable="true"
                    android:textColor="@color/colorPrimaryDark"
...
